InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/vlocity_ins__Element__c.object-meta.xml
<CustomObject>
    <description>Vlocity OmniScript Elements are the components which make up an OmniScript.</description>
    <label>Vlocity OmniScript Element</label>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>