InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/fields/vlocity_ins__InternalNotes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InternalNotes__c</fullName>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>