InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/fields/vlocity_ins__Order__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>