InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/fields/vlocity_ins__ParentElementType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentElementType__c</fullName>
    <formula>TEXT(vlocity_ins__ParentElementId__r.vlocity_ins__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Element Type</label>
    <type>Text</type>
</CustomField>