InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/fields/vlocity_ins__ReusableOmniScript__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReusableOmniScript__c</fullName>
    <formula>vlocity_ins__OmniScriptId__r.vlocity_ins__IsReusable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reusable OmniScript</label>
    <type>Checkbox</type>
</CustomField>