InsuranceOrg/force-app/main/default/objects/vlocity_ins__Element__c/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Calculation Action</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Conditional Block</fullName>
            </value>
            <value>
                <fullName>Custom Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Loop Block</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>DataRaptor Extract Action</fullName>
            </value>
            <value>
                <fullName>DataRaptor Post Action</fullName>
            </value>
            <value>
                <fullName>DataRaptor Transform Action</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time (Local)</fullName>
            </value>
            <value>
                <fullName>Delete Action</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
            <value>
                <fullName>DocuSign Envelope Action</fullName>
            </value>
            <value>
                <fullName>DocuSign Signature Action</fullName>
            </value>
            <value>
                <fullName>Done Action</fullName>
            </value>
            <value>
                <fullName>Edit Block</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Action</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Filter Block</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Geolocation</fullName>
            </value>
            <value>
                <fullName>Headline</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Input Block</fullName>
            </value>
            <value>
                <fullName>Integration Procedure Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>